# graphics

./: .gitignore  .gitmodules
015_Blending/: CMakeLists.txt  make_project.bat  make_project_and_open.bat  open.bat
015_Blending/Data/: scene1
015_Blending/Data/Models/: plane.mtl
015_Blending/app/include/: BlendingApplication.h  CBlendingApplication.h  CCameraController.h
015_Blending/app/include/Engine/: COpenGLApplication.h
015_Blending/app/include/Engine/Assets/: CAssetsManager.h
015_Blending/app/include/Engine/Camera/: CCamera.h
015_Blending/app/include/Engine/Light/: CDirectionalLight.h  CLight.h  CLightsSet.h  CPointLight.h  CSpotLight.h
015_Blending/app/include/Engine/Model/: CAssimpModel.h  CMaterial.h  CModel.h  CModelFactory.h  IModel.h
015_Blending/app/include/Engine/Scene/: CBlendingScene.h  CScene.h
015_Blending/app/include/Engine/Serialization/: SerializationUtils.h
015_Blending/app/include/Engine/Shader/: CShader.h  Shader.h
015_Blending/app/include/Engine/Texture/: CTexture.h
015_Blending/app/src/: BlendingApplication.cpp  CBlendingApplication.cpp  CCameraController.cpp  CameraController.cpp  Main.cpp
015_Blending/app/src/Engine/: COpenGLApplication.cpp
015_Blending/app/src/Engine/Assets/: CAssetsManager.cpp
015_Blending/app/src/Engine/Camera/: CCamera.cpp
015_Blending/app/src/Engine/Light/: CDirectionalLight.cpp  CLight.cpp  CLightsSet.cpp  CPointLight.cpp  CSpotLight.cpp  PointLight.cpp
015_Blending/app/src/Engine/Model/: AssimpModel.cpp  CAssimpModel.cpp  CMaterial.cpp  CModel.cpp  Model.cpp
015_Blending/app/src/Engine/Scene/: CScene.cpp
015_Blending/app/src/Engine/Shader/: CShader.cpp
015_Blending/app/src/Engine/Texture/: CTexture.cpp
Tests_Emscripten/016_Framebuffers/: CMakeLists.txt  clang-format
Tests_Emscripten/016_Framebuffers/Data/Shaders/: shader.frag  siluete.frag
Tests_Emscripten/016_Framebuffers/app/include/Engine/: COpenGLApplication.h
Tests_Emscripten/016_Framebuffers/app/include/Engine/Light/: CLightsSet.h
Tests_Emscripten/016_Framebuffers/app/include/Engine/Model/: CMesh.h  (+1 more)
Tests_Emscripten/016_Framebuffers/app/src/: Main.cpp
Tests_Emscripten/016_Framebuffers/app/src/Engine/: SUniqueId.cpp
(+304 files in other folders)
